# dspy_evolutionary_optimizer

./: .pylintrc  README.md  lint_monitor.py  lint_monitor.sh  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_dspy_debug.py  test_model.py  test_optimizer.py  test_optimizer_core.py
evoprompt/: __init__.py  chromosome.py  optimizer.py  visualization.py
evoprompt/optimizer/: core.py  visualization.py
examples/: classification_example.py  pattern_optimization_example.py  qa_example.py
