[project]
dependencies = [
    "textual>=0.54.0",
    "dspy>=2.0.0"
]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C", "A", "N", "UP", "YTT", "RUF"]
ignore = ["E501", "E203", "N802", "N803", "N806"]
exclude = [
    ".git",
    ".mypy_cache", 
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "*.pyi",
]

[tool.ruff.isort]
known-first-party = ["evoprompt"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default-section = "FIRSTPARTY"
